Added sanitization to /contact post data. Also added test response for dev env.

--- a/.env-sample
+++ b/.env-sample
@@ -1,8 +1,8 @@
-{
-    "sendmail": {
-        "pass": '',
-        "user": '',
-        "to": '',
-        "from": ''
+module.exports = {
+    sendmail: {
+        pass: '', // sendmail password
+        user: '', // sendmail user
+        to: '', // sendmail to email@domain.com
+        from: '' // sendmail from email@yourdomain.com
     }
 }
